Added grid documentation

--- a/docs/.vuepress/index.sass
+++ b/docs/.vuepress/index.sass
@@ -1,2 +1,7 @@
-.example
+.vuepress-plugin-demo-block__app
   @import '../../packages/dermis/index'
+
+  @import 'styles/helpers/highlight-cell'
+
+.vuepress-plugin-demo-block__wrapper .vuepress-plugin-demo-block__display
+  max-height: none
