Fixed max height for code preview

--- a/docs/.vuepress/index.sass
+++ b/docs/.vuepress/index.sass
@@ -3,5 +3,5 @@
 
   @import 'styles/helpers/highlight-cell'
 
-.vuepress-plugin-demo-block__wrapper .vuepress-plugin-demo-block__display
+.vuepress-plugin-demo-block__wrapper .vuepress-plugin-demo-block__display.vuepress-plugin-demo-block__display
   max-height: none
