--- a/packages/type/src/definition.sass
+++ b/packages/type/src/definition.sass
@@ -3,14 +3,14 @@
 +cssvar-expose-map($type-line-height-map, $prefix: 'type-line-height')
 +cssvar-expose-map($type-face-map, $prefix: 'type-face')
 
-\:root
+@at-root :root
   --type-space-base: #{$type-space-base}
   --type-space-1: var(--type-space-base)
   --type-space-2: calc(var(--type-space-base) * 2)
   --type-space-3: calc(var(--type-space-base) * 3)
   --type-space-4: calc(var(--type-space-base) * 4)
 
-body
+@at-root body
   font-family: var(--type-face-body)
   +type-line('body', 'body')
 
