Dsiabling local heme and using `all` to disable default styles

--- a/docs/.vuepress/index.sass
+++ b/docs/.vuepress/index.sass
@@ -1,4 +1,11 @@
 .vuepress-plugin-demo-block__app
+  all: initial
+  display: block
+
+  *
+    all: initial
+
+.vuepress-plugin-demo-block__app.vuepress-plugin-demo-block__app.vuepress-plugin-demo-block__app.vuepress-plugin-demo-block__app
   @import '../../packages/dermis/index'
 
   @import 'styles/helpers/highlight-cell'
