--- a/docs/.vuepress/index.sass
+++ b/docs/.vuepress/index.sass
@@ -1,14 +1,27 @@
-.vuepress-plugin-demo-block__app
+// SUPER DIRTY DIRTY hack
+// Do not use this cind of things on production
+.vuepress-plugin-demo-block__app.vuepress-plugin-demo-block__app.vuepress-plugin-demo-block__app
   all: initial
   display: block
 
   *
-    all: initial
+    all: unset
 
-.vuepress-plugin-demo-block__app.vuepress-plugin-demo-block__app.vuepress-plugin-demo-block__app.vuepress-plugin-demo-block__app
-  @import '../../packages/dermis/index'
+  @import 'styles/helpers/default-styles'
 
-  @import 'styles/helpers/highlight-cell'
+  div.vuepress-plugin-demo-block__wrapper div.vuepress-plugin-demo-block__display &.vuepress-plugin-demo-block__app.vuepress-plugin-demo-block__app
+    @import '../../packages/dermis/index'
+
+    @import 'styles/helpers/highlight-cell'
+
+    @extend body
+
+    box-sizing: border-box
+
+    *,
+    *::before,
+    *::after
+      box-sizing: inherit
 
 .vuepress-plugin-demo-block__wrapper .vuepress-plugin-demo-block__display.vuepress-plugin-demo-block__display
   max-height: none
