Small fix in default typography default typeface

--- a/packages/type/src/variables.sass
+++ b/packages/type/src/variables.sass
@@ -74,7 +74,7 @@ $type-line-height-map: map-merge($type-line-height-map, ('heading': $type-line-h
 $type-line-height-map: map-merge($type-line-height-map, ('body': $type-line-height-body))
 
 // TYPEFACES:
-$type-face-body: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default
+$type-face-body: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default
 $type-face-heading: $type-face-body !default
 $type-face-monospace: SFMono-Regular, 'Menlo', 'Monaco', 'Consolas', 'Liberation Mono', 'Courier New', monospace !default
 
