Documentation for typography package cleaned

--- a/packages/type/src/block.sass
+++ b/packages/type/src/block.sass
@@ -125,6 +125,7 @@
 
     p
       +type-line('lg')
+      font-weight: 300
 
   code,
   kbd,
@@ -148,6 +149,15 @@
     width: 100%
     overflow-x: auto
     tab-size: 2
+
+    code
+      display: block
+
+  a, label
+    cursor: pointer
+
+  i, cite, em, var, address, dfn
+    font-style: italic
 
 
 .#{$TYPE_PREFIX}words
