--- a/packages/dermis/index.sass
+++ b/packages/dermis/index.sass
@@ -1,5 +1,6 @@
 @import "@dermis/base"
 @import "@dermis/rut"
 @import "@dermis/mq"
+@import "@dermis/tone"
 @import "@dermis/type"
 @import "@dermis/grid"
