--- a/packages/base/src/mixins/colors.sass
+++ b/packages/base/src/mixins/colors.sass
@@ -19,7 +19,7 @@
   $green: luminance-rgb-chanel-adgust(green($color))
   $blue: luminance-rgb-chanel-adgust(blue($color))
 
-  @return red * 0.2126 + $green * 0.7152 + $blue * 0.0722
+  @return $red * 0.2126 + $green * 0.7152 + $blue * 0.0722
 
 @function luminance-rgb-chanel-adgust($value)
   $value: $value / 255
@@ -27,6 +27,6 @@
   @if $value < 0.03928
     $value: $value / 12.92
   @else
-    $value: pow(($value + .055) / 1.055, 2.4)
+    $value: math-pow(($value + .055) / 1.055, 2.4)
 
-  @return $value
+  @return $value * 10
