Started to work on tone documentation

--- a/docs/.vuepress/index.sass
+++ b/docs/.vuepress/index.sass
@@ -13,6 +13,7 @@
     @import '../../packages/dermis/index'
 
     @import 'styles/helpers/highlight-cell'
+    @import 'styles/helpers/tone'
 
     @extend body
 
