Added tone color shifting function

--- a/packages/tone/src/mixins.sass
+++ b/packages/tone/src/mixins.sass
@@ -35,7 +35,26 @@
 
   @return $result
 
-@mixin tone-colorize($background, $light: white, $dark: black)
+@function tone-color-shift($color, $shift, $specs: ())
+  $specs: map-merge($TONE_DEFAULT_SPECS, $specs)
+  $way: if($shift >= 0, 1 , -1)
+  $opposite: if($shift >= 0, -1 , 1)
+  $shift: (50 + $shift) / 100
+  $hsb: hsl-to-hsv(hue($color), saturation($color), lightness($color))
+
+  $shift-hue: call(map-get($specs, hue-curve), $shift)
+  $shift-saturation: call(map-get($specs, saturation-curve), $shift)
+  $shift-brightness: call(map-get($specs, brightness-curve), $shift)
+
+  $hue-current: nth($hsb, 1) + $shift-hue * $TONE_HUE_SHIFT * $way
+  $saturation-current: tone-range-value(50 - nth($hsb, 2) % 50, 0 50, 0 $TONE_SATURATION_SHIFT)
+  $saturation-current: nth($hsb, 2) + $saturation-current * $shift-saturation * $way
+  $brightness-current: tone-range-value(50 - nth($hsb, 3) % 50, 0 50, 0 $TONE_BRIGHTNESS_SHIFT)
+  $brightness-current: nth($hsb, 3) + $brightness-current * $opposite
+
+  @return hsl(hsv-to-hsl($hue-current, $saturation-current, $brightness-current)...)
+
+@mixin tone-background($background, $light: white, $dark: black)
   $contrast: contrast-ratio($background, $light)
   $foreground: $dark
 
