--- a/packages/tone/src/variables.scss
+++ b/packages/tone/src/variables.scss
@@ -6,6 +6,10 @@ $TONE_HUE_RANGE: 0 $TONE_HUE_MAX;
 $TONE_SATURATION_RANGE: 0 $TONE_SATURATION_MAX;
 $TONE_BRIGHTNESS_RANGE: 0 $TONE_BRIGHTNESS_MAX;
 
+$TONE_HUE_SHIFT: 4;
+$TONE_SATURATION_SHIFT: $TONE_SATURATION_MAX / 6;
+$TONE_BRIGHTNESS_SHIFT: $TONE_BRIGHTNESS_MAX / 6;
+
 $TONE_PALETTE_MARKS: 0 5 10 20 30 40 50 60 70 80 90 100;
 
 $TONE_DEFAULT_SPECS: (
