--- a/packages/type/src/block.sass
+++ b/packages/type/src/block.sass
@@ -101,11 +101,11 @@
     border-top: 1px dashed currentColor
 
   small
-    +type-line('xs')
+    font-size: 75%
 
   sub,
   sup
-    +type-line('xs')
+    font-size: 75%
 
   mark
     // background: rgba(var(--color-warning), 0.3)
