--- a/packages/type/src/variables.sass
+++ b/packages/type/src/variables.sass
@@ -37,7 +37,7 @@ $type-letter-spacing-xl: 0.025em !default;
 $type-letter-spacing-2xl: 0.05em !default;
 $type-letter-spacing-3xl: 0.1em !default;
 
-$type-letter-spacing-display: $type-letter-spacing-2xs !default;
+$type-letter-spacing-display: $type-letter-spacing-xs !default;
 $type-letter-spacing-heading: $type-letter-spacing-sm !default;
 $type-letter-spacing-body: $type-letter-spacing-md !default;
 $type-letter-spacing-wide: $type-letter-spacing-2xl !default;
