--- a/packages/base/src/mixins/colors.sass
+++ b/packages/base/src/mixins/colors.sass
@@ -34,6 +34,5 @@
 @function contrast-ratio($background, $foreground)
   $lf: luminance($foreground)
   $lb: luminance($background)
-  $min: min($lf, $lb) + 0.05
-  $max: max($lf, $lb) + 0.05
-  @return abs($max / $min)
+
+  @return max($lf, $lb) - min($lf, $lb)
