Now current theme is in --theme variables. Theme variations are all named now(-base and -inverse)

--- a/docs/.vuepress/styles/helpers/tone.sass
+++ b/docs/.vuepress/styles/helpers/tone.sass
@@ -77,6 +77,6 @@
                     background-color: var(--#{$key}-#{$name}-light)
                     +tone-background(map-get($variations, light), map-get($variations, text), map-get($variations, text-inverse))
 
-+d-theme-block('base', 'theme', $theme)
++d-theme-block('base', 'theme-base', $theme-base)
 
 +d-theme-block('inverse', 'theme-inverse', $theme-inverse)
