--- a/packages/tone/src/definition.sass
+++ b/packages/tone/src/definition.sass
@@ -1,3 +1,5 @@
-+cssvar-expose-map($theme, $prefix: 'theme')
++cssvar-expose-map($theme-base, $prefix: 'theme-base')
 
 +cssvar-expose-map($theme-inverse, $prefix: 'theme-inverse')
+
++tone-theme-apply($theme-base, $name: 'theme-base')
