--- a/packages/rut/src/definition.sass
+++ b/packages/rut/src/definition.sass
@@ -2,18 +2,35 @@
   --rut-base: #{$rut-base}
 
   --space-1: var(--rut-base)
-  --space-2: calc(2 * var(--rut-base))
-  --space-3: calc(3 * var(--rut-base))
-  --space-4: calc(4 * var(--rut-base))
-  --space-5: calc(5 * var(--rut-base))
-  --space-6: calc(6 * var(--rut-base))
-  --space-7: calc(7 * var(--rut-base))
-  --space-8: calc(8 * var(--rut-base))
-  --space-9: calc(9 * var(--rut-base))
-  --space-10: calc(10 * var(--rut-base))
+  --space-2: calc(2 * var(--space-1))
+  --space-3: calc(3 * var(--space-1))
+  --space-4: calc(4 * var(--space-1))
+  --space-5: calc(5 * var(--space-1))
+  --space-6: calc(6 * var(--space-1))
+  --space-7: calc(7 * var(--space-1))
+  --space-8: calc(8 * var(--space-1))
+  --space-9: calc(9 * var(--space-1))
+  --space-10: calc(10 * var(--space-1))
 
   --space-xs: var(--space-1)
   --space-sm: var(--space-2)
   --space-md: var(--space-3)
   --space-lg: var(--space-4)
   --space-xl: var(--space-5)
+
+  --layout-1: calc(4 * var(--rut-base))
+  --layout-2: calc(2 * var(--layout-1))
+  --layout-3: calc(3 * var(--layout-1))
+  --layout-4: calc(4 * var(--layout-1))
+  --layout-5: calc(5 * var(--layout-1))
+  --layout-6: calc(6 * var(--layout-1))
+  --layout-7: calc(7 * var(--layout-1))
+  --layout-8: calc(8 * var(--layout-1))
+  --layout-9: calc(9 * var(--layout-1))
+  --layout-10: calc(10 * var(--layout-1))
+
+  --layout-xs: var(--layout-1)
+  --layout-sm: var(--layout-2)
+  --layout-md: var(--layout-3)
+  --layout-lg: var(--layout-4)
+  --layout-xl: var(--layout-5)
