Added minimal height for space to display

--- a/docs/.vuepress/styles/helpers/space.sass
+++ b/docs/.vuepress/styles/helpers/space.sass
@@ -1,6 +1,7 @@
 .d-space-display
   --space: 0
   padding-left: $space-lg
+  min-height: $space-10
   position: relative
   z-index: 2
 
@@ -45,7 +46,8 @@
 
 .d-layout-display
   --layout: 0
-  padding-left: $layout-lg
+  padding-left: $space-lg
+  min-height: $layout-10
   position: relative
   z-index: 2
 
