Integration of panel and section into packages documentation

--- a/docs/.vuepress/index.sass
+++ b/docs/.vuepress/index.sass
@@ -15,6 +15,7 @@
     @import 'styles/helpers/highlight-cell'
     @import 'styles/helpers/space'
     @import 'styles/helpers/tone'
+    @import 'styles/helpers/section'
 
     @extend body
 
