--- a/packages/rut/src/variables.sass
+++ b/packages/rut/src/variables.sass
@@ -40,6 +40,10 @@ $layout-sm: $layout-2 !default
 $layout-md: $layout-3 !default
 $layout-lg: $layout-4 !default
 $layout-xl: $layout-5 !default
+$layout-2xl: $layout-6 !default
+$layout-3xl: $layout-7 !default
+$layout-4xl: $layout-8 !default
+$layout-5xl: $layout-9 !default
 
 $layout-map: () !default
 $layout-map: map-merge($layout-map, ('xs': $layout-xs))
@@ -47,3 +51,7 @@ $layout-map: map-merge($layout-map, ('sm': $layout-sm))
 $layout-map: map-merge($layout-map, ('md': $layout-md))
 $layout-map: map-merge($layout-map, ('lg': $layout-lg))
 $layout-map: map-merge($layout-map, ('xl': $layout-xl))
+$layout-map: map-merge($layout-map, ('2xl': $layout-2xl))
+$layout-map: map-merge($layout-map, ('3xl': $layout-3xl))
+$layout-map: map-merge($layout-map, ('4xl': $layout-4xl))
+$layout-map: map-merge($layout-map, ('5xl': $layout-5xl))
