Small api changes for panel and section elements

--- a/packages/panel/src/block.sass
+++ b/packages/panel/src/block.sass
@@ -2,7 +2,9 @@
   +panel-block(panel, $panel-space)
 
   &__
-    &body
+    &element
+      display: block
+
       &--
         &offset_
           &full,
