--- a/packages/section/src/block.sass
+++ b/packages/section/src/block.sass
@@ -4,7 +4,9 @@
   --section-space-horizontal: 0
 
   &__
-    &body
+    &element
+      display: block
+
       margin-top: var(--section-space-vertical)
       margin-bottom: var(--section-space-vertical)
       padding-left: var(--section-space-horizontal)
