Added caption package

--- a/packages/dermis/index.sass
+++ b/packages/dermis/index.sass
@@ -3,7 +3,10 @@
 @import "@dermis/mq"
 @import "@dermis/tone"
 @import "@dermis/type"
+
 @import "@dermis/grid"
 @import "@dermis/aspect-ratio"
 @import "@dermis/panel"
 @import "@dermis/section"
+
+@import "@dermis/caption"
