Small fixes. Updated alignment section in grid documentation

--- a/docs/.vuepress/index.sass
+++ b/docs/.vuepress/index.sass
@@ -10,6 +10,8 @@
   @import 'styles/helpers/default-styles'
 
   div.vuepress-plugin-demo-block__wrapper div.vuepress-plugin-demo-block__display &.vuepress-plugin-demo-block__app.vuepress-plugin-demo-block__app
+    $GRID_SHOULD_ALIGN: true !global
+
     @import '../../packages/dermis/index'
 
     @import 'styles/helpers/highlight-cell'
