--- a/packages/grid/src/row/variables.scss
+++ b/packages/grid/src/row/variables.scss
@@ -1,5 +1,5 @@
 $GRID_ROW_PREFIX: $GRID_PREFIX !default;
-$GRID_SHOULD_ALIGN: false !default;
+$GRID_SHOULD_ALIGN: true !default;
 
 $grid-row-space: $space-md !default;
 $grid-row-space-map: $space-map !default;
