--- a/packages/panel/src/block.sass
+++ b/packages/panel/src/block.sass
@@ -1,3 +1,11 @@
+%#{$DERMIS_PREFIX}panel__element--indent_outside-top
+  padding-top: 0
+  margin-top: var(--panel-space-vertical)
+
+%#{$DERMIS_PREFIX}panel__element--indent_outside-bottom
+  padding-bottom: 0
+  margin-bottom: var(--panel-space-vertical)
+
 .#{$DERMIS_PREFIX}panel
   +panel-block(panel, $panel-space)
 
@@ -6,6 +14,34 @@
       display: block
 
       &--
+        $modifier-prefix: '.#{$DERMIS_PREFIX}panel__element--'
+        $offset-prefix: '#{$modifier-prefix}offset_'
+
+        &indent_
+          &outside
+            &#{$offset-prefix}full,
+            &#{$offset-prefix}vertical,
+            &#{$offset-prefix}top
+              @extend %#{$DERMIS_PREFIX}panel__element--indent_outside-top
+
+            &#{$offset-prefix}full,
+            &#{$offset-prefix}vertical,
+            &#{$offset-prefix}bottom
+              @extend %#{$DERMIS_PREFIX}panel__element--indent_outside-bottom
+
+          &inside
+            &#{$offset-prefix}full,
+            &#{$offset-prefix}vertical,
+            &#{$offset-prefix}top
+              margin-top: 0
+              padding-top: var(--panel-space-vertical)
+
+            &#{$offset-prefix}full,
+            &#{$offset-prefix}vertical,
+            &#{$offset-prefix}bottom
+              margin-bottom: 0
+              padding-bottom: var(--panel-space-vertical)
+
         &offset_
           &full,
           &horizontal,
@@ -20,12 +56,12 @@
           &full,
           &vertical,
           &top
-            margin-top: var(--panel-space-vertical)
+            @extend %#{$DERMIS_PREFIX}panel__element--indent_outside-top
 
           &full,
           &vertical,
           &bottom
-            margin-bottom: var(--panel-space-vertical)
+            @extend %#{$DERMIS_PREFIX}panel__element--indent_outside-bottom
 
   &--
     &space_
