Removed semicolons from *.sass files

--- a/packages/type/src/variables.sass
+++ b/packages/type/src/variables.sass
@@ -1,18 +1,18 @@
 $TYPE_PREFIX: 't-' !default
 
 // FONT SIZES:
-$type-font-size-2xs: 10px !default;
-$type-font-size-xs: 12px !default;
-$type-font-size-sm: 14px !default;
-$type-font-size-md: 16px !default;
-$type-font-size-lg: 20px !default;
-$type-font-size-xl: 24px !default;
-$type-font-size-2xl: 34px !default;
-$type-font-size-3xl: 48px !default;
-$type-font-size-4xl: 60px !default;
-$type-font-size-5xl: 96px !default;
+$type-font-size-2xs: 10px !default
+$type-font-size-xs: 12px !default
+$type-font-size-sm: 14px !default
+$type-font-size-md: 16px !default
+$type-font-size-lg: 20px !default
+$type-font-size-xl: 24px !default
+$type-font-size-2xl: 34px !default
+$type-font-size-3xl: 48px !default
+$type-font-size-4xl: 60px !default
+$type-font-size-5xl: 96px !default
 
-$type-font-size-body: $type-font-size-md !default;
+$type-font-size-body: $type-font-size-md !default
 
 $type-font-size-map: () !default
 $type-font-size-map: map-merge($type-font-size-map, ('2xs': $type-font-size-2xs))
@@ -28,19 +28,19 @@ $type-font-size-map: map-merge($type-font-size-map, ('5xl': $type-font-size-5xl)
 $type-font-size-map: map-merge($type-font-size-map, ('body': $type-font-size-body))
 
 // LETTER SPACING:
-$type-letter-spacing-2xs: -0.05em !default;
-$type-letter-spacing-xs: -0.025em !default;
-$type-letter-spacing-sm: -0.015em !default;
-$type-letter-spacing-md: 0 !default;
-$type-letter-spacing-lg: 0.015em !default;
-$type-letter-spacing-xl: 0.025em !default;
-$type-letter-spacing-2xl: 0.05em !default;
-$type-letter-spacing-3xl: 0.1em !default;
+$type-letter-spacing-2xs: -0.05em !default
+$type-letter-spacing-xs: -0.025em !default
+$type-letter-spacing-sm: -0.015em !default
+$type-letter-spacing-md: 0 !default
+$type-letter-spacing-lg: 0.015em !default
+$type-letter-spacing-xl: 0.025em !default
+$type-letter-spacing-2xl: 0.05em !default
+$type-letter-spacing-3xl: 0.1em !default
 
-$type-letter-spacing-display: $type-letter-spacing-xs !default;
-$type-letter-spacing-heading: $type-letter-spacing-sm !default;
-$type-letter-spacing-body: $type-letter-spacing-md !default;
-$type-letter-spacing-wide: $type-letter-spacing-2xl !default;
+$type-letter-spacing-display: $type-letter-spacing-xs !default
+$type-letter-spacing-heading: $type-letter-spacing-sm !default
+$type-letter-spacing-body: $type-letter-spacing-md !default
+$type-letter-spacing-wide: $type-letter-spacing-2xl !default
 
 $type-letter-spacing-map: () !default
 $type-letter-spacing-map: map-merge($type-letter-spacing-map, ('2xs': $type-letter-spacing-2xs))
@@ -57,13 +57,13 @@ $type-letter-spacing-map: map-merge($type-letter-spacing-map, ('body': $type-let
 $type-letter-spacing-map: map-merge($type-letter-spacing-map, ('wide': $type-letter-spacing-wide))
 
 // LINE HEIGHTS:
-$type-line-height-xs: 1 !default;
-$type-line-height-sm: 1.35 !default;
-$type-line-height-md: 1.5 !default;
+$type-line-height-xs: 1 !default
+$type-line-height-sm: 1.35 !default
+$type-line-height-md: 1.5 !default
 
-$type-line-height-display: $type-line-height-xs !default;
-$type-line-height-heading: $type-line-height-sm !default;
-$type-line-height-body: $type-line-height-md !default;
+$type-line-height-display: $type-line-height-xs !default
+$type-line-height-heading: $type-line-height-sm !default
+$type-line-height-body: $type-line-height-md !default
 
 $type-line-height-map: () !default
 $type-line-height-map: map-merge($type-line-height-map, ('xs': $type-line-height-xs))
