--- a/packages/base/src/mixins/easings.sass
+++ b/packages/base/src/mixins/easings.sass
@@ -11,10 +11,10 @@
   @return if($step < 0.5, 2 * $step * $step, (4 - 2 * $step) * $step - 1)
 
 @function ease-out-sine($step)
-  @return sin(pi() / 2 * $step);
+  @return sin(pi() / 2 * $step)
 
 @function ease-in-sine($step)
-  @return 1 + sin(pi() / 2 * $step - pi() / 2);
+  @return 1 + sin(pi() / 2 * $step - pi() / 2)
 
 @function ease-in-out-sine($step)
-  @return (1 + sin(pi() * $step - pi() / 2)) / 2;
+  @return (1 + sin(pi() * $step - pi() / 2)) / 2
